# tft-helper

./: .gitignore  README.md  pyproject.toml
data/stat/: augments.json  augments1.json  rapid_ocr_dict.txt  unit_items.json  unit_url.json
src/: __version__.py
src/capture/: BaseCaptureMethod.py  BaseWindowsCaptureMethod.py  ReplayerCaptureMethod.py  WindowsGraphicsCaptureMethod.py  d3d11.py  hwnd_window.py
src/capture/rotypes/Windows/Foundation/: Collections.py  __init__.py
src/capture/rotypes/Windows/Globalization/: __init__.py
src/capture/rotypes/Windows/Graphics/Capture/: __init__.py
src/capture/rotypes/Windows/Graphics/DirectX/: __init__.py
src/capture/rotypes/Windows/Graphics/DirectX/Direct3D11/: __init__.py
src/capture/rotypes/Windows/Graphics/Imaging/: __init__.py
src/capture/rotypes/Windows/Media/Ocr/: __init__.py
src/capture/rotypes/Windows/Security/Cryptography/: __init__.py
src/capture/rotypes/Windows/Storage/Streams/: __init__.py
src/common/: constant.py  exception.py  game_info.py  logger.py  ocr.py  signal.py  task_config.py
src/crawler/: auguments.py  items_pic.py  ocr_word_dict.py  unit_items.py  units.py
src/gui/: cards.py  interfaces.py  log_window.py  main_window.py  overlay_window.py  tft_table.py
src/task/: TaskExectuor.py  augument_task.py  base_task.py  game_stage_task.py  hex_task.py  item_task.py
src/test/: find_pic.py  meta_test.py  replay.py  task_test.py  window_capture_test.py
src/test/ocr_test/: ocr_test.py
src/util/: postion_parse.py
