[tool.poetry]
name = "tft-helper"
version = "0.1.0"
description = "云顶之弈 (Teamfight Tactics) 游戏助手"
authors = ["Li Pan <904399787@qq.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6-fluent-widgets = "^1.7.0"
loguru = "^0.7.2"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
typing-extensions = "^4.12.2"
rapidocr-paddle = "^1.3.28"
paddlepaddle = "^2.6.2"
requests = "^2.32.3"
bs4 = "^0.0.2"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
rapidocr-onnxruntime = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
